--- a/src/main/resources/templates/blog.mustache
+++ b/src/main/resources/templates/blog.mustache
@@ -1,4 +1,18 @@
 {{> header}}
 <h1>{{title}}</h1>
-{{content}}
+<div class="articles">
+  {{#articles}}}
+    <section>
+      <header class=""article-header">
+        <h2 class="article-title"><a href="/article/{{slug}}">{{title}}</a></h2>
+        <div class="article-meta">By  <strong>{{author.firstname}}</strong>
+        , on <strong>{{addedAt}}</strong></div>
+      </header>
+      <div class="article-description">
+        {{headerline}}
+      </div>
+    </section>
+  {{/articles}}
+</div>
+
 {{> footer}}
