--- a/src/main/resources/templates/article.mustache
+++ b/src/main/resources/templates/article.mustache
@@ -3,8 +3,7 @@
 <section class="article">
   <header class="article-header">
     <h1 class="article-title">{{article.title}}</h1>
-    <p class="article-meta">By  <strong>{{article.author.firstname}}</strong>
-    , on <strong>{{article.addedAt}}</strong></p>
+    <p class="article-meta">By {{article.author.firstname}}, on {{article.addedAt}}</p>
   </header>
 
   <div class="article-description">
